Bug 1394188 - Make tab labels not change during reload. r=bzbarsky,florian

Differential Revision: https://phabricator.services.mozilla.com/D14602

--HG--
extra : moz-landing-system : lando